--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -60,7 +60,7 @@
     <!-- Ajoutez le champ caché pour reCAPTCHA -->
     <%= hidden_field_tag :recaptcha_token, nil, id: "recaptcha_token" %>
     <div>
-      <%= form.submit "Continuer ⏩️", class: "button large" %>
+      <%= form.submit "Continuer", class: "button large" %>
     </div>
   </div>
 <% end %>
