--- a/app/views/pages/cgu.html.erb
+++ b/app/views/pages/cgu.html.erb
@@ -1,62 +1,3 @@
-<style>
-  h2{
-    margin-top: 48px;
-  }
-  .grid-1{
-    padding-bottom: 64px;
-  }
-
-
-  .date{
-    font-weight: 300;
-    margin-top: 16px;
-  }
-  @media screen and (min-width:0px) and (max-width:349px) {
-      .grid-1{
-        padding: 0 5vw;
-        padding-bottom: 45px;
-      }
-
-      .top-default-page svg{
-        scale: 0.8;
-      }
-      h2{
-        margin-top: 48px;
-        font-size: 16px;
-        margin-bottom: 18px;
-      }
-      .grid-1 p{
-        font-size: 14px;
-      }
-    }
-  @media screen and (min-width:350px) and (max-width:800px) {
-    .grid-1{
-      padding: 0 5vw;
-      padding-bottom: 45px;
-    }
-    h2{
-      margin-top: 48px;
-      font-size: 18px;
-      margin-bottom: 18px;
-    }
-    .grid-1 p{
-      font-size: 16px;
-    }
-  }
-  @media screen and (min-width:801px) and (max-width:1200px) {
-    .grid-1{
-    padding: 0 5vw;
-    }
-    h2{
-      margin-top: 52px;
-      font-size: 20px;
-    }
-    .grid-1 p{
-      font-size: 17px;
-      line-height:130%;
-    }
-  }
-</style>
 <section class="top-default-page">
   <%= link_to root_path do %>
     <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -68,7 +9,7 @@
 <section class="grid-1">
   <p class="black medium">Dernière mise à jour : 26/08/2024</p>
   <p style="margin-top:24px">
-    Bienvenue sur le site <a href="https://omniscientdesign.fr" class="black" target="_blank">https://omniscientdesign.fr</a> (ci-après "le Site"). En accédant au Site et en utilisant nos services, vous acceptez sans réserve les présentes Conditions Générales d'Utilisation (CGU). Si vous n'acceptez pas ces conditions, veuillez ne pas utiliser le Site.
+    Bienvenue sur le site <a href="https://omniscientdesign.fr" class="black underline" target="_blank">https://omniscientdesign.fr</a> (ci-après "le Site"). En accédant au Site et en utilisant nos services, vous acceptez sans réserve les présentes Conditions Générales d'Utilisation (CGU). Si vous n'acceptez pas ces conditions, veuillez ne pas utiliser le Site.
   </p>
   <h2>1 - Objet</h2>
   <p>
@@ -108,7 +49,7 @@
   </p>
   <h2>8 - Protection des Données Personnelles</h2>
   <p>
-    L'Éditeur s'engage à respecter la confidentialité des données personnelles des Utilisateurs, conformément à sa Politique de Confidentialité disponible <a href="https://omniscientdesign.fr/politiquedeconfidentialite" class="black" target="_blank">https://omniscientdesign.fr/politiquedeconfidentialite</a>. Conformément à la réglementation en vigueur (notamment le RGPD), l'Utilisateur dispose de droits d'accès, de rectification, d'effacement et de limitation du traitement de ses données personnelles.
+    L'Éditeur s'engage à respecter la confidentialité des données personnelles des Utilisateurs, conformément à sa Politique de Confidentialité disponible <a href="https://omniscientdesign.fr/politiquedeconfidentialite" class="black underline" target="_blank">https://omniscientdesign.fr/politiquedeconfidentialite</a>. Conformément à la réglementation en vigueur (notamment le RGPD), l'Utilisateur dispose de droits d'accès, de rectification, d'effacement et de limitation du traitement de ses données personnelles.
   </p>
   <h2>9 - Cookies</h2>
   <p>
@@ -124,6 +65,6 @@
   </p>
   <h2>12 - Contact</h2>
   <p>
-    Pour toute question relative aux présentes CGU, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:omniscientdesign.co@gmail.com" class="black" target="_blank">omniscientdesign.co@gmail.com</a>
+    Pour toute question relative aux présentes CGU, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:omniscientdesign.co@gmail.com" class="black underline" target="_blank">omniscientdesign.co@gmail.com</a>
   </p>
 </section>
