--- a/app/views/pages/mentionslegales.html.erb
+++ b/app/views/pages/mentionslegales.html.erb
@@ -1,56 +1,3 @@
-<style>
-  h2{
-    margin-top: 48px;
-  }
-   .grid-1{
-    padding-bottom: 64px;
-   }
-
-  @media screen and (min-width:0px) and (max-width:349px) {
-    .grid-1{
-      padding: 0 5vw;
-      padding-bottom: 45px;
-    }
-    .top-default-page svg{
-      scale: 0.8;
-    }
-    h2{
-      margin-top: 48px;
-      font-size: 16px;
-      margin-bottom: 18px;
-    }
-    .grid-1 p{
-      font-size: 14px;
-    }
-  }
-  @media screen and (min-width:350px) and (max-width:800px) {
-    .grid-1{
-      padding: 0 5vw;
-      padding-bottom: 45px;
-    }
-    h2{
-      margin-top: 48px;
-      font-size: 18px;
-      margin-bottom: 18px;
-    }
-    .grid-1 p{
-      font-size: 16px;
-    }
-  }
-  @media screen and (min-width:801px) and (max-width:1200px) {
-   .grid-1{
-    padding: 0 5vw;
-    }
-    h2{
-      margin-top: 52px;
-      font-size: 20px;
-    }
-    .grid-1 p{
-      font-size: 17px;
-      line-height:130%;
-    }
-  }
-</style>
 <section class="top-default-page">
   <%= link_to root_path do %>
     <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -84,23 +31,23 @@
     Le site est hébergé par :<br>
     <span class="black medium">Hostinger International Ltd</span><br>
     Siège social : 61 Lordou Vironos str., 6023 Larnaca, Chypre<br>
-    Contact : <a href="mailto:fr@hostinger.com" class="black">fr@hostinger.com</a><br>
-    Site web : <a href="https://www.hostinger.fr/" class="black" target="_blank">https://www.hostinger.fr</a>
+    Contact : <a href="mailto:fr@hostinger.com" class="black underline">fr@hostinger.com</a><br>
+    Site web : <a href="https://www.hostinger.fr/" class="black underline" target="_blank">https://www.hostinger.fr</a>
   </p>
   <h2>3 - Principe général</h2>
   <p>
-    Est considéré comme Utilisateur toute personne accédant au site <a href="https://omniscientdesign.fr" class="black" target="_blank">omniscientdesign.fr</a> et l’utilisant.
+    Est considéré comme Utilisateur toute personne accédant au site <a href="https://omniscientdesign.fr" class="black underline" target="_blank">omniscientdesign.fr</a> et l’utilisant.
     <br>
     <br>
     Le Site est régulièrement mis à jour par QUEMERE Edgar. QUEMERE Edgar s'efforce de fournir des informations aussi précises que possible sur le Site. Toutefois, il ne peut garantir l'exactitude, la complétude ou l'actualité des informations publiées, qu'elles soient de son fait ou fournies par des partenaires tiers. Par conséquent, l'Utilisateur reconnaît utiliser ces informations à titre indicatif, sous sa responsabilité exclusive.
   </p>
   <h2>4 -  Accès au site</h2>
   <p>
-    Le site <a href="https://omniscientdesign.fr" class="black" target="_blank">omniscientdesign.fr</a> est accessible 24 heures sur 24, 7 jours sur 7, sauf en cas d'interruption pour des besoins de maintenance ou de force majeure. En cas d'indisponibilité du service, omniscientdesign.fr s'efforcera de rétablir l'accès au plus vite et de communiquer à l'avance aux utilisateurs les dates et heures de l'intervention. Le site ne saurait être tenu pour responsable de tout dommage résultant d'une indisponibilité du service.
+    Le site <a href="https://omniscientdesign.fr" class="black underline" target="_blank">omniscientdesign.fr</a> est accessible 24 heures sur 24, 7 jours sur 7, sauf en cas d'interruption pour des besoins de maintenance ou de force majeure. En cas d'indisponibilité du service, omniscientdesign.fr s'efforcera de rétablir l'accès au plus vite et de communiquer à l'avance aux utilisateurs les dates et heures de l'intervention. Le site ne saurait être tenu pour responsable de tout dommage résultant d'une indisponibilité du service.
   </p>
   <h2>5 -  Propriété Intellectuelle</h2>
   <p>
-    Tous les contenus présents sur le site <a href="https://omniscientdesign.fr" class="black" target="_blank">https://omniscientdesign.fr</a>, y compris les textes, images, vidéos, créations graphiques, ainsi que les œuvres et références soumises par les utilisateurs, sont protégés par les lois relatives à la propriété intellectuelle. L'Éditeur est propriétaire des droits de propriété intellectuelle sur les éléments originaux du Site, à l'exception des contenus fournis par les utilisateurs.
+    Tous les contenus présents sur le site <a href="https://omniscientdesign.fr" class="black underline" target="_blank">https://omniscientdesign.fr</a>, y compris les textes, images, vidéos, créations graphiques, ainsi que les œuvres et références soumises par les utilisateurs, sont protégés par les lois relatives à la propriété intellectuelle. L'Éditeur est propriétaire des droits de propriété intellectuelle sur les éléments originaux du Site, à l'exception des contenus fournis par les utilisateurs.
     <br>
     <br>
     Les utilisateurs peuvent soumettre leurs propres œuvres et références sur le Site, à condition que ces contenus soient libres de droits et ne violent pas les droits d'auteur ou autres droits de propriété intellectuelle de tiers. En soumettant des œuvres et références, les utilisateurs accordent à l'Éditeur une licence non exclusive, gratuite, et valable pour toute la durée de protection des droits d'auteur, permettant l'utilisation, la reproduction, l'affichage, la diffusion, et la modification de ces contenus dans le cadre du fonctionnement et de la promotion du Site.
@@ -110,7 +57,7 @@
   </p>
   <h2>6 - Liens externes</h2>
   <p>
-    Le Site peut contenir des liens vers des sites web externes. <a href="https://omniscientdesign.fr" class="black" target="_blank">omniscientdesign.fr</a> ne peut être tenu responsable du contenu de ces sites tiers ni de leurs pratiques en matière de confidentialité. L'Utilisateur accède à ces liens externes à ses propres risques.
+    Le Site peut contenir des liens vers des sites web externes. <a href="https://omniscientdesign.fr" class="black underline" target="_blank">omniscientdesign.fr</a> ne peut être tenu responsable du contenu de ces sites tiers ni de leurs pratiques en matière de confidentialité. L'Utilisateur accède à ces liens externes à ses propres risques.
   </p>
   <h2>7 - Responsabilité des Contenus Utilisateurs </h2>
   <p>
