--- a/app/views/pages/presentation.html.erb
+++ b/app/views/pages/presentation.html.erb
@@ -12,14 +12,7 @@
     width: 180px;
     margin-top: 64px;
   }
-  h1{
-    color: #FFF;
-    width: 40%;
-    font-size: 68px;
-    font-weight: 400;
-    margin-top: 64px;
-    line-height:140%;
-  }
+
   .btn-section-top{
     position: absolute;
     bottom: 65px;
@@ -265,7 +258,7 @@
   }
 </style>
 <section class="top-presentation grid1">
-  <%= image_tag "white-logo.svg", alt: "", class: "logo-top" %>
+  <%= image_tag "logo-white.svg", alt: "", class: "logo-top" %>
   <h1>Explorez nos centaines de références </h1>
   <div class="btn-section-top">
     <%= link_to "Démarrer l’exploration !🚪", new_user_registration_path, class: "button-signup"%>
