--- a/app/views/oeuvres/_form.html.erb
+++ b/app/views/oeuvres/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: oeuvre) do |form| %>
+<%= form_with(model: @oeuvre, local: true) do |form| %>
   <% if @oeuvre.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(@oeuvre.errors.count, "erreur") %> ont empêché cette œuvre d'être sauvegardée :</h2>
@@ -45,7 +45,7 @@
       <%= form.text_field :image, placeholder: "Url de l'image" %>
     </div>
     <div>
-      <%= form.submit "Continuer ⏩️", class: "button large" %>
+      <%= form.submit "Continuer", class: "button large" %>
     </div>
   </div>
 <% end %>
