--- a/app/views/pages/cookies.html.erb
+++ b/app/views/pages/cookies.html.erb
@@ -1,63 +1,3 @@
-<style>
-  .grid-1 p{
-    color:#8D9299;
-    font-size: 18px;
-    line-height:130%;
-  }
-
-  .date{
-    font-weight: 300;
-    margin-top: 16px;
-  }
-
-    @media screen and (min-width:0px) and (max-width:349px) {
-    .grid-1{
-      padding: 0 5vw;
-      padding-bottom: 45px;
-    }
-    .top-default-page svg{
-      scale: 0.8;
-    }
-    h2{
-      margin-top: 48px;
-      font-size: 16px;
-      margin-bottom: 18px;
-    }
-    .grid-1 p{
-      font-size: 14px;
-    }
-  }
-  @media screen and (min-width:350px) and (max-width:800px) {
-    .grid-1{
-      padding: 0 5vw;
-      padding-bottom: 45px;
-    }
-
-    h2{
-      margin-top: 48px;
-      font-size: 18px;
-      margin-bottom: 18px;
-    }
-    .grid-1 p{
-      font-size: 16px;
-    }
-
-  }
-  @media screen and (min-width:801px) and (max-width:1200px) {
-   .grid-1{
-    padding: 0 5vw;
-    }
-
-    h2{
-      margin-top: 52px;
-      font-size: 20px;
-    }
-    .grid-1 p{
-      font-size: 17px;
-      line-height:130%;
-    }
-  }
-</style>
 <section class="top-default-page">
   <%= link_to root_path do %>
     <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -70,11 +10,13 @@
   <h2>1 - Utilisation des Cookies </h2>
   <p>Ce site web utilise des cookies pour améliorer votre expérience de navigation. Les cookies sont de petits fichiers texte stockés sur votre ordinateur lorsque vous visitez un site web. Ils sont largement utilisés pour aider les sites à fonctionner correctement, à améliorer leur performance et à fournir des informations aux propriétaires du site.</p>
   <h2>2 - Types de Cookies Utilisés</h2>
-  <p><span class="black">1. Cookies Essentiels :</span> Ces cookies sont nécessaires au bon fonctionnement du site et ne peuvent pas être désactivés dans nos systèmes. Ils sont généralement définis en réponse à des actions que vous effectuez, comme la demande de services, telles que la connexion ou le remplissage de formulaires.<br>
+  <p>
+    <span class="black">1. Cookies Essentiels :</span> Ces cookies sont nécessaires au bon fonctionnement du site et ne peuvent pas être désactivés dans nos systèmes. Ils sont généralement définis en réponse à des actions que vous effectuez, comme la demande de services, telles que la connexion ou le remplissage de formulaires.<br>
     <br>
     <span class="black">2. Cookies Analytiques :</span> Ces cookies nous permettent de suivre les performances de notre site web, de comprendre comment les visiteurs interagissent avec le site et d'améliorer ses fonctionnalités. Les informations collectées sont anonymes et servent à améliorer notre site.<br>
     <br>
-    <span class="black"> 3. Cookies de Personnalisation :</span> Ces cookies permettent au site de se souvenir de vos choix et préférences, tels que la langue préférée ou la région dans laquelle vous vous trouvez. Ces informations peuvent être utilisées pour vous offrir une expérience plus personnalisée.</p>
+    <span class="black"> 3. Cookies de Personnalisation :</span> Ces cookies permettent au site de se souvenir de vos choix et préférences, tels que la langue préférée ou la région dans laquelle vous vous trouvez. Ces informations peuvent être utilisées pour vous offrir une expérience plus personnalisée.
+  </p>
   <h2>3 - Sécurité</h2>
   <p>Nous prenons des mesures pour protéger vos informations personnelles contre tout accès non autorisé, utilisation abusive ou divulgation. Cependant, veuillez noter qu'aucune méthode de transmission de données sur Internet ou de stockage électronique n'est totalement sécurisée. Nous ne pouvons donc pas garantir une sécurité absolue.<br>
     Notre site internet possède bien entendu un Certificat SSL (Secure Socket Layer).
