--- a/app/views/pages/politiquedeconfidentialite.html.erb
+++ b/app/views/pages/politiquedeconfidentialite.html.erb
@@ -1,61 +1,3 @@
-<style>
-  h2{
-    margin-top: 48px;
-  }
-  .grid-1{
-    padding-bottom: 64px;
-  }
-  .date{
-    font-weight: 300;
-    margin-top: 16px;
-  }
-    @media screen and (min-width:0px) and (max-width:349px) {
-  .grid-1{
-    padding: 0 5vw;
-    padding-bottom: 45px;
-  }
-
-  .top-default-page svg{
-    scale: 0.8;
-  }
-  h2{
-    margin-top: 48px;
-    font-size: 16px;
-    margin-bottom: 18px;
-  }
-  .grid-1 p{
-    font-size: 14px;
-  }
-    }
-    @media screen and (min-width:350px) and (max-width:800px) {
-  .grid-1{
-    padding: 0 5vw;
-    padding-bottom: 45px;
-  }
-  h2{
-    margin-top: 48px;
-    font-size: 18px;
-    margin-bottom: 18px;
-  }
-  .grid-1 p{
-    font-size: 16px;
-  }
-
-    }
-    @media screen and (min-width:801px) and (max-width:1200px) {
-     .grid-1{
-  padding: 0 5vw;
-  }
-  h2{
-    margin-top: 52px;
-    font-size: 20px;
-  }
-  .grid-1 p{
-    font-size: 17px;
-    line-height:130%;
-  }
-    }
-</style>
 <section class="top-default-page">
   <%= link_to root_path do %>
     <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -73,7 +15,7 @@
     &nbsp;• Sur les destinataires de ces données personnelles ;<br>
     &nbsp;• Sur la politique du site en matière de cookies.<br>
     <br>
-    Cette politique complète les mentions légales et les Conditions Générales d’Utilisation consultables par les utilisateurs à l’adresse suivante : <a href="https://omniscientdesign.fr" class="black" target="_blank">https://omniscientdesign.fr/mentionslegales</a> et <a href="https://omniscientdesign.fr/cgu" class="black" target="_blank">https://omniscientdesign.fr/cgu</a>
+    Cette politique complète les mentions légales et les Conditions Générales d’Utilisation consultables par les utilisateurs à l’adresse suivante : <a href="https://omniscientdesign.fr" class="black underline" target="_blank">https://omniscientdesign.fr/mentionslegales</a> et <a href="https://omniscientdesign.fr/cgu" class="black" target="_blank">https://omniscientdesign.fr/cgu</a>
   </p>
   <h2>1 - Responsable du traitement des données</h2>
   <p>
@@ -153,7 +95,7 @@
   <h2>11 - Contact</h2>
   <p>
     Si vous avez des questions ou des préoccupations concernant notre politique de confidentialité ou la manière dont nous traitons vos données personnelles, vous pouvez nous contacter à l'adresse suivante :
-    <a href="mailto:omniscientdesign.co@gmail.com" class="black" target="_blank">omniscientdesign.co@gmail.com</a>
+    <a href="mailto:omniscientdesign.co@gmail.com" class="black underline" target="_blank">omniscientdesign.co@gmail.com</a>
     <br>
     <br>
     Le respect de vos droits est notre priorité<br>
